deploy/kube-lb-cluster/webhook-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-lb-services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-webhook
  namespace: kube-lb-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-webhook
  template:
    metadata:
      labels:
        app: lb-webhook
    spec:
      serviceAccountName: lb-webhook
      containers:
      - name: lb-webhook
        image: projectgreenist/kube-lb-webhook:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
