deploy/kube-lb-cluster/webhook-serive.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-webhook
  namespace: kube-lb-services
spec:
  selector:
    app: lb-webhook
  ports:
  - port: 80
    targetPort: 8080
